gccida/c1/build_type_copy
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_type_copy/src/tree.c:3515:12: error: expected expression
*( _OWORD *)&result->block.fragment_chain = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_type_copy/src/tree.c:3515:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->block.fragment_chain = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_type_copy/src/obj/tree.o] Error 1
